flux/apps/ext/wg-easy/httproute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
spec:
  chain:
    middlewares:
      - name: bouncer
        namespace: traefik-ext
      - name: authelia-auth
        namespace: traefik-ext
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wg-easy
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik-ext
  hostnames:
    - "headscale-wg.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: wg-easy-http
          port: 51821
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
